--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app-boda-service",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
